# LAD

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  paths.py  pyproject.toml  requirements.txt
concept_outputs/: classes_100.txt  classes_500.txt  classes_places365.txt  concepts_by_class.json  generation_stats.csv  guitar_class.txt  imagenet1k_classes.csv
concept_outputs/per_class_txt/: abacus.txt  academic_gown.txt  acorn.txt  african_chameleon.txt  african_crocodile.txt  african_elephant.txt  agaric.txt  aircraft_carrier.txt  albatross.txt  alp.txt  altar.txt  ambulance.txt  american_lobster.txt  american_staffordshire_terrier.txt  amphibian.txt  angora.txt  appenzeller.txt  apron.txt  artichoke.txt  axolotl.txt  baboon.txt  badger.txt  bagel.txt  balance_beam.txt  bald_eagle.txt  balloon.txt  ballpoint.txt  banana.txt  band_aid.txt  barber_chair.txt  barn_spider.txt  barracouta.txt  barrow.txt  basketball.txt  basset.txt  bathtub.txt  beacon.txt  beaker.txt  beaver.txt  bedlington_terrier.txt  (+460 more)
concept_outputs/per_class_txt_c10/: abacus.txt  academic_gown.txt  acorn.txt  african_chameleon.txt  african_crocodile.txt  african_elephant.txt  agaric.txt  aircraft_carrier.txt  albatross.txt  alp.txt  (+488 more)
notebooks/: 01_sanity_check.ipynb  03_retinal_concept_explorer.ipynb
scripts/: 01_download_imagenet.py  02_filter_correct.py  03_generate_concepts.py  04_build_clip_npz.py  05_train_lad.py  06_eval_metrics.py  07_train_face.py  08_train_craft.py  09_eval_baselines.py  dry_run.py  places365_setup.py  train_lad_ablation_no_lang.py  train_lad_ablation_no_unfold.py  visualize_concepts_batch.py
tests/: test_decomposition.py
(+1393 files in other folders)
