[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lad"
version = "0.1.0"
description = "Language-Anchored Decomposition: post-hoc concept discovery that is named, faithful, and model-preserving."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ahsan Habib Akash" },
  { name = "Dipkamal Bhusal" },
  { name = "Stacey Jones" },
  { name = "Donald A. Adjeroh" },
  { name = "Binod Bhattarai" },
  { name = "Prashnna Kumar Gyawali", email = "prashnna.gyawali@mail.wvu.edu" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy>=1.24",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "scikit-image>=0.21",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "tqdm>=4.65",
  "Pillow>=10.0",
  "opencv-python>=4.8",
  "open-clip-torch>=2.24",
  "openai>=1.10",
  "datasets>=2.16",
  "huggingface_hub>=0.20",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4"]

[project.urls]
Repository = "https://github.com/machine-intelligence-lab-wvu/LAD"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lad = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
